# minstrel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp  maind.cpp
data/db/: 0a5f0256.songf  0a600257.songf  0a610258.songf  0a620259.songf  0a63025a.songf  0a64025b.songf  songf.hexpat  test.hexproj  test.songf
include/: types.h  window.h
include/db/: song.h  songf.h
include/event/: event.h  event_sed.inc  event_svu.inc  event_types.h
include/gfx/: ui.h  window.h
include/io/: io.h
include/song/: song.h
include/ui/: ui.h  ui_sdb.h  ui_sed.h  ui_svu.h  ui_util.h
include/util/: consts.h
src/: window.c
src/db/: song.c
src/event/: event.c
src/gfx/: ui.c  window.c
src/io/: io.c
src/ui/: ui.c  ui_sdb.c  ui_sed.c  ui_svu.c  ui_util.c
